Add the ability to import/export follow/followers and update pages

--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<title>Twitter blocklist importer and exporter PHP</title>
+		<title>Twitter following/followers/blocking list importer and exporter PHP</title>
+		<link rel="stylesheet" type="text/css" href="main.css">
 	</head>
 	<body>
-		<a href="login.php">Login with Twitter</a><br>
-		<a href="logout.php">Logout(destory php session)</a><br>
-		<a href="https://github.com/nnn1590/twitter-blocklist-import-and-export-php">Source code</a>
+		<div class="main">
+			<h1>Twitter following/followers/blocking list importer and exporter PHP</h1>
+			<p>Import/export following/followers/blocking list like Twitter Web Client</p>
+			<div class="note_warning">
+				WARNING: This app/tool does not specifically consider Twitter API rate limits or account lock/suspend.
+				Please be careful when using...<br><br>
+				警告: このアプリ/ツールはTwitter APIのレートリミットやアカウントのロック/凍結について特に考慮していません。
+				使用する場合は気をつけてください…
+			</div>
+			<a href="login.php">Login with Twitter</a><br>
+			<a href="logout.php">Logout(destory php session)</a>
+			<hr>
+			<a href="https://github.com/nnn1590/twitter-blocklist-import-and-export-php">Source code</a>
+		</div>
 	</body>
 </html>
