--- a/blocking_export.html
+++ b/blocking_export.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<title>Twitter blocklist importer and exporter PHP</title>
+		<title>Twitter following/followers/blocking list importer and exporter PHP</title>
 	</head>
 	<body>
-		<a href="exportlist.php">Download all</a>
+		<a href="exportlist.php?what_imexport=blocks">Download all</a>
 		<!-- TODO: Select the user to export with the check box (checked by default) -->
 	</body>
 </html>
