--- a/blocking_import.html
+++ b/blocking_import.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<title>Twitter blocklist importer and exporter PHP</title>
+		<title>Twitter following/followers/blocking list importer and exporter PHP</title>
 	</head>
 	<body>
 		WARNING: This page will block even if you are following them, or being followed by them, or both.
 		Be careful not to ruin your relationships...
 		<!-- TODO: Select the user to import(block) with the check box (checked by default, expect if following/followed) -->
-		<form action="importlist.php" method="post" enctype="multipart/form-data">
+		<form action="importlist.php?what_imexport=blocks" method="post" enctype="multipart/form-data">
 			<input type="file" name="filename">
 			<input type="submit">
 		</form>
