--- a/blocking_import.html
+++ b/blocking_import.html
@@ -12,6 +12,7 @@
 		<form action="importlist.php?what_imexport=blocks" method="post" enctype="multipart/form-data">
 			<input type="file" name="filename">
 			<input type="submit">
+			<input type="checkbox" name="mode2" value="true">Mode2(Maybe faster, but consuming more API rate limits)
 		</form>
 	</body>
 </html>
