--- a/following_import.html
+++ b/following_import.html
@@ -10,6 +10,7 @@
 		<form action="importlist.php?what_imexport=friends" method="post" enctype="multipart/form-data">
 			<input type="file" name="filename">
 			<input type="submit">
+			<input type="checkbox" name="mode2" value="true">Mode2(Maybe faster, but consuming more API rate limits)
 		</form>
 	</body>
 </html>
