*_import.html: A little update
- Mode2 is checked by default
- Add <label> tag to mode2 checkbox. Now, you can toggle checkbox by clicking text
- Change order of mode2 checkbox and submit button

--- a/blocking_import.html
+++ b/blocking_import.html
@@ -11,8 +11,8 @@
 		<!-- TODO: Select the user to import(block) with the check box (checked by default, expect if following/followed) -->
 		<form action="importlist.php?what_imexport=blocks" method="post" enctype="multipart/form-data">
 			<input type="file" name="filename">
+			<label><input type="checkbox" name="mode2" value="true" checked>Mode2(Maybe faster, but consuming more API rate limits)</label>
 			<input type="submit">
-			<input type="checkbox" name="mode2" value="true">Mode2(Maybe faster, but consuming more API rate limits)
 		</form>
 	</body>
 </html>
